<resources>
    <string name="app_name">Quản lý thông tin người dùng</string>
    <string name="login">Đăng nhập</string>
    <string name="register">Đăng ký</string>
    <string name="email">Tài khoản Email</string>
    <string name="fullName">Họ và tên</string>
    <string name="birthDay">Sinh nhật</string>
    <string name="phoneNumber">Số điện thoại</string>
    <string name="accept">Đồng ý</string>
    <string name="empty">Trường này không được trống</string>
    <string name="password">Mật khẩu</string>
    <string name="oldPassword">Mật khẩu cũ</string>
    <string name="newPassword">Mật khẩu mới</string>
    <string name="reNewPassword">Nhập lại mật khẩu mới</string>
    <string name="rePassword">Nhập lại mật khẩu</string>
    <string name="cancle">Hủy</string>
    <string name="forgotpassword">Quên mật khẩu</string>
    <string name="resetpassword">Lấy lại mật khẩu</string>
    <string name="facebook_app_id">1113632212477037</string>
    <string name="fb_login_protocol_scheme">fb1113632212477037</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="location">Định vị</string>
    <string name="list_friend">Danh sách bạn bè</string>
    <string name="profile">Cá nhân</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="key_api">AIzaSyDCYEh8q-afhlCE9E9WiStcGOSdjKAo6OM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>