<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.usermanage.view.register.RegisterActivityViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_main_activity"
        android:fitsSystemWindows="true"
        tools:context="com.usermanage.view.register.RegisterActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="@drawable/background_transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/im_iconLogo"
            android:layout_width="@dimen/dp200"
            android:layout_height="@dimen/dp200"
            app:layout_constraintBottom_toTopOf="@+id/et_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_account"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp50"
            android:layout_marginHorizontal="@dimen/dp20"
            android:background="@drawable/background_et"
            android:hint="@string/email"
            android:paddingLeft="@dimen/dp15"
            android:text="@={viewmodel.email}"
            app:error="@{viewmodel.errorEmail}"
            app:layout_constraintBottom_toTopOf="@+id/layout_et_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/im_iconLogo" />

        <LinearLayout
            android:id="@+id/layout_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp20"
            android:background="@drawable/background_et"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/layout_et_rePassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_account">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="@dimen/dp320"
                android:layout_height="@dimen/dp50"
                android:background="@drawable/background_et"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/dp15"
                android:text="@={viewmodel.password}"
                app:error="@{viewmodel.errorPassword}" />

            <ImageButton
                android:id="@+id/ib_showPassword"
                android:layout_width="@dimen/dp50"
                android:layout_height="@dimen/dp50"
                android:background="@drawable/background_et"
                android:onClick="@{()->viewmodel.onClickShowPassword()}"
                android:src="@{viewmodel.m_ShowPassword ? @drawable/ic_eye_close :@drawable/ic_eye}" />
            />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_et_rePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp20"
            android:background="@drawable/background_et"
            app:layout_constraintBottom_toTopOf="@+id/bt_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_et_password">

            <EditText
                android:id="@+id/et_rePassword"
                android:layout_width="@dimen/dp320"
                android:layout_height="@dimen/dp50"
                android:background="@drawable/background_et"
                android:hint="@string/rePassword"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/dp15"
                android:text="@={viewmodel.repassword}"
                app:error="@{viewmodel.errorRepassword}" />

            <ImageButton
                android:id="@+id/ib_showRePassword"
                android:layout_width="@dimen/dp50"
                android:layout_height="@dimen/dp50"
                android:background="@drawable/background_et"
                android:onClick="@{()->viewmodel.onClickShowRePassword()}"
                android:src="@{viewmodel.m_ShowRePassword ? @drawable/ic_eye_close :@drawable/ic_eye}" />
            />
        </LinearLayout>

        <Button
            android:id="@+id/bt_register"
            android:layout_width="@dimen/dp200"
            android:layout_height="@dimen/dp50"
            android:background="@drawable/background_bt_login"
            android:onClick="@{()->viewmodel.onClick()}"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="@dimen/dp15"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_et_rePassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
