<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.usermanage.view.changePassword.ChangePasswordActivityViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_main_activity"
        android:fitsSystemWindows="true"
        android:gravity="center_vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="@drawable/background_transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/im_change_password"
            android:layout_width="@dimen/dp200"
            android:layout_height="@dimen/dp200"
            android:layout_marginHorizontal="@dimen/dp20"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/layout_et_newPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

        </ImageView>


        <LinearLayout
            android:id="@+id/layout_et_newPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp20"
            android:background="@drawable/background_et"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/layout_et_reNewPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/im_change_password">

            <EditText
                android:id="@+id/et_newPassword"
                android:layout_width="@dimen/dp330"
                android:layout_height="@dimen/dp50"
                android:background="@drawable/background_et"
                android:hint="@string/newPassword"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/dp15"
                android:text="@={viewmodel.newPassword}"
                app:error="@{viewmodel.errorNewPassword}" />

            <ImageButton
                android:id="@+id/ib_showNewPassword"
                android:layout_width="@dimen/dp50"
                android:layout_height="@dimen/dp50"
                android:background="@drawable/background_et"
                android:onClick="@{()->viewmodel.onShowNewPassword()}"
                android:src="@{viewmodel.showNewPassword ? @drawable/ic_eye_close :@drawable/ic_eye}" />
            />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_et_reNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp20"
            android:background="@drawable/background_et"
            app:layout_constraintBottom_toTopOf="@+id/bt_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_et_newPassword">

            <EditText
                android:id="@+id/et_reNewPassword"
                android:layout_width="@dimen/dp330"
                android:layout_height="@dimen/dp50"
                android:background="@drawable/background_et"
                android:hint="@string/reNewPassword"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/dp15"
                android:text="@={viewmodel.reNewPassword}"
                app:error="@{viewmodel.errorReNewPassword}" />

            <ImageButton
                android:id="@+id/ib_showRePassword"
                android:layout_width="@dimen/dp50"
                android:layout_height="@dimen/dp50"
                android:background="@drawable/background_et"
                android:onClick="@{()->viewmodel.onShowReNewPassword()}"
                android:src="@{viewmodel.showReNewPassword ? @drawable/ic_eye_close :@drawable/ic_eye}" />
            />
        </LinearLayout>

        <Button
            android:id="@+id/bt_register"
            android:layout_width="@dimen/dp200"
            android:layout_height="@dimen/dp50"
            android:background="@drawable/background_bt_login"
            android:onClick="@{()->viewmodel.onClick()}"
            android:text="@string/accept"
            android:textColor="@color/black"
            android:textSize="@dimen/dp15"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_et_reNewPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
